Small fix to abrupt phases slide

--- a/slides/dia_project.tex
+++ b/slides/dia_project.tex
@@ -147,8 +147,9 @@ We identified 3 abrupt phases influenced by the seasonality that characterizes g
 \item [2.] [May-August], the ``Swimsuit Season" phase
 \item [3.] [September-December], the ``Back to Normal" phase
 \end{itemize}
-\end{frame}
-Each period has the same length of 4 months and is denoted by almost-stationary behaviors of the users for its duration.  
+\vspace{\baselineskip}
+Each period has the same length of 4 months and is denoted by almost-stationary behaviors of the users for its duration. 
+\end{frame} 
 
 \begin{frame}{Assignment 1 - Phase 1}
 Add click functions + comments
