Updated slides with plots

--- a/slides/dia_project.tex
+++ b/slides/dia_project.tex
@@ -231,6 +231,22 @@ plot rewards and regrets
 \end{lstlisting}
 \end{frame}
 
+\begin{frame}{Assignment 2 -  Cumulative Regret}
+\begin{figure}[hbtp]
+\centering
+\includegraphics[width=0.8\textwidth]{images/assignment_2_cum_regret.png}
+\caption{}
+\end{figure}
+\end{frame}
+
+\begin{frame}{Assignment 2 - Regret}
+\begin{figure}[hbtp]
+\centering
+\includegraphics[width=0.8\textwidth]{images/assignment_2_regret.png}
+\caption{}
+\end{figure}
+\end{frame}
+
 \begin{frame}{Assignment 3}
 \textit{Design a sliding-window combinatorial bandit algorithm for the case, instead, in which there are the three phases aforementioned. Plot the cumulative regret and compare it with the cumulative regret that a non-sliding-window algorithm would obtain.}
 \end{frame}
@@ -252,6 +268,22 @@ plot rewards and regrets for the 2 learners
 \end{lstlisting}
 \end{frame}
 
+\begin{frame}{Assignment 3 -  Cumulative Regret}
+\begin{figure}[hbtp]
+\centering
+\includegraphics[width=0.8\textwidth]{images/assignment_3_cum_regret.png}
+\caption{}
+\end{figure}
+\end{frame}
+
+\begin{frame}{Assignment 3 - Rewards}
+\begin{figure}[hbtp]
+\centering
+\includegraphics[width=0.8\textwidth]{images/assignment_3_reward.png}
+\caption{}
+\end{figure}
+\end{frame}
+
 \begin{frame}{Assignment 4}
 \textit{Design a learning algorithm for pricing when the users that will buy the product are those that have clicked on the ads. Assume that the allocation of the budget over the three subcampaigns is fixed and there is only one phase (make this assumption also in the next steps). Plot the cumulative regret.}
 \end{frame}
@@ -271,6 +303,14 @@ plot rewards and regrets for the 2 learners
 \end{lstlisting}
 \end{frame}
 
+\begin{frame}{Assignment 4 - Regrets}
+\begin{figure}[hbtp]
+\centering
+\includegraphics[width=0.8\textwidth]{images/assignment_4_regrets.png}
+\caption{}
+\end{figure}
+\end{frame}
+
 \begin{frame}{Assignment 5}
 \textit{Design and run a context generation algorithm for the pricing when the budget allocated to each single subcampaign is fixed. At the end of every week, use the collected data to generate contexts and then use these contexts for the following week. Plot the cumulative regret as time increases. In the next steps, do not use the generated contexts, but use all the data together.}
 \end{frame}
@@ -288,6 +328,22 @@ for exp in n_experiments:
 calculate clairvoyant value
 plot rewards and regrets
 \end{lstlisting}
+\end{frame}
+
+\begin{frame}{Assignment 5 - Cumulative Regret}
+\begin{figure}[hbtp]
+\centering
+\includegraphics[width=0.8\textwidth]{images/assignment_5_cum_regret.png}
+\caption{}
+\end{figure}
+\end{frame}
+
+\begin{frame}{Assignment 5 - Rewards}
+\begin{figure}[hbtp]
+\centering
+\includegraphics[width=0.8\textwidth]{images/assignment_5_reward.png}
+\caption{}
+\end{figure}
 \end{frame}
 
 \begin{frame}{Assignment 6}
@@ -314,6 +370,22 @@ plot rewards and regrets
 \end{lstlisting}
 \end{frame}
 
+\begin{frame}{Assignment 6 - Cumulative Regret}
+\begin{figure}[hbtp]
+\centering
+\includegraphics[width=0.8\textwidth]{images/assignment_6_cum_regret.png}
+\caption{}
+\end{figure}
+\end{frame}
+
+\begin{frame}{Assignment 6 - Regret}
+\begin{figure}[hbtp]
+\centering
+\includegraphics[width=0.8\textwidth]{images/assignment_6_regret.png}
+\caption{}
+\end{figure}
+\end{frame}
+
 \begin{frame}{Assignment 7}
 \textit{Do the same of Step 6 under the constraint that the seller charges a unique price to all the classes of users. Suggestion: for every possible price, fix this price and repeat the algorithm used in Step 6. Plot the cumulative regret when the algorithm learns both the conversion rate curves and the performance of the advertising subcampaigns.}
 \end{frame}
@@ -337,6 +409,14 @@ for exp in n_experiments:
 calculate clairvoyant value
 plot rewards and regrets
 \end{lstlisting}
+\end{frame}
+
+\begin{frame}{Assignment 7 - Regrets}
+TODO
+\end{frame}
+
+\begin{frame}{Assignment 7 - Rewards}
+TODO
 \end{frame}
 
 \end{document}
