Run assignments 2 and 5, updates on slides

--- a/slides/dia_project.tex
+++ b/slides/dia_project.tex
@@ -2,7 +2,9 @@
 \usetheme{default}
 \usecolortheme{beaver}
 \usepackage{fancyvrb}
+\usepackage{eurosym}
 \usepackage[utf8]{inputenc}
+\DeclareUnicodeCharacter{20AC}{\euro}
 \usepackage{pmboxdraw}
 \usepackage[english]{babel}
 \usepackage{amsmath}
@@ -51,6 +53,9 @@
 
 \lstset{style=mystyle}
 
+\makeatletter
+\let\@@magyar@captionfix\relax
+\makeatother
 \begin{document}
 
 \begin{frame}
@@ -417,15 +422,15 @@ plot rewards and regrets
 \begin{figure}[hbtp]
 \centering
 \includegraphics[width=0.8\textwidth]{images/assignment_5_cum_regret.png}
-\caption{}
+\caption{If we compare this results with the one obtained in assignment 4, we can see that we obtain a worst result in terms of cumulative regret, but this is due to the method that we use to compute the optimum in the two cases.}
 \end{figure}
 \end{frame}
 
-\begin{frame}{Assignment 5 - Rewards}
+\begin{frame}{Assignment 5 - Cumulative Reward}
 \begin{figure}[hbtp]
 \centering
 \includegraphics[width=0.8\textwidth]{images/assignment_5_reward.png}
-\caption{}
+\caption{If we look instead to the cumulative reward, we can see that we get an higher point compared to assignment 4}
 \end{figure}
 \end{frame}
 
