minor on documents

--- a/slides/dia_project.tex
+++ b/slides/dia_project.tex
@@ -422,7 +422,7 @@ plot rewards and regrets
 \begin{figure}[hbtp]
 \centering
 \includegraphics[width=0.8\textwidth]{images/assignment_5_cum_regret.png}
-\caption{If we compare this results with the one obtained in assignment 4, we can see that we obtain a worst result in terms of cumulative regret, but this is due to the method that we use to compute the optimum in the two cases.}
+\caption{If we compare this result with the one obtained in assignment 4, we can see that we obtain a worse result in terms of cumulative regret, but this is due to the method that we use to compute the optimum in the two cases.}
 \end{figure}
 \end{frame}
 
@@ -430,7 +430,7 @@ plot rewards and regrets
 \begin{figure}[hbtp]
 \centering
 \includegraphics[width=0.8\textwidth]{images/assignment_5_reward.png}
-\caption{If we look instead to the cumulative reward, we can see that we get an higher point compared to assignment 4}
+\caption{If we look instead to the cumulative reward, we can see that we get a better result compared to assignment 4}
 \end{figure}
 \end{frame}
 
