--- a/slides/dia_project.tex
+++ b/slides/dia_project.tex
@@ -482,6 +482,7 @@ Setting \#1, parameters:
 \begin{itemize}
 \item T = 365
 \item Number of experiments = 50
+\item Class probabilities = \( \left[ \frac{1}{4}, \frac{1}{2}, \frac{1}{4} \right] \)
 \item Number of arms pricing = $\ceil{(T \log{(T)})^{\frac{1}{4}}}$ = 8
 \item Number of arms advertising = 21
 \end{itemize}
@@ -519,8 +520,8 @@ Setting \#1, parameters:
 \begin{frame}{Assignment 6 - Cumulative Reward}
 \begin{figure}[hbtp]
 \centering
-\includegraphics[width=8cm]{images/assignment_6_cum_reward.png}
-\caption{If instead we observe the cumulative reward, we can see that the algorithm is gaining an increasing reward with the development of time thanks to the increasing slope of the curve.}
+\includegraphics[width=8cm]{images/assignment_6_inst_reward.png}
+\caption{If instead we observe the instantaneous reward, we can see that the algorithm is almost near to reach the optimal value.}
 \end{figure}
 \end{frame}
 
@@ -563,17 +564,36 @@ Setting \#1, parameters:
 \begin{frame}{Assignment 7 - Regrets of optimal arm}
 \begin{figure}[hbtp]
 \centering
-\includegraphics[width=0.8\textwidth]{images/assignment_7_regrets_arm_2_cum_regret.png}
-\caption{In this assignment we can notice that the algorithms reaches a suboptimal solution after few steps but then accumulates regret almost linearly due to inefficiency of the imposed price.}
+\includegraphics[width=0.8\textwidth]{images/assignment_7_regrets_arm_3_cum_regret.png}
+\caption{The slope of the curve shows an initial phase of learning and exploration that is stopped from 3 phases of suboptimal solutions in which the regret increases linearly.}
 \end{figure}
 \end{frame}
 
 \begin{frame}{Assignment 7 - Rewards of optimal arm}
 \begin{figure}[hbtp]
 \centering
-\includegraphics[width=0.8\textwidth]{images/assignment_7_regrets_arm_2_cum_reward.png}
-\caption{Here we can notice that the reward is lower than the cumulative reward of the assignment 6.}
+\includegraphics[width=0.8\textwidth]{images/assignment_7_regrets_arm_3_inst_reward.png}
+\caption{Here we can notice that the algorithm reaches a stable point near the optimum but cannot manage to increase its value.}
 \end{figure}
+\end{frame}
+
+\begin{frame}{Assignment 6 \& 7 Comparison}
+	\begin{itemize}
+		\item Optimal value:
+		\begin{itemize}
+			\item Assignment 6: 7074
+			\item Assignment 7: 6977
+		\end{itemize}
+		The difference between the two is due to the imposed price of the assignment 7.
+		\item Assignment 6 shows a slower a increase of instant reward while assignment 7 reaches high values quite immediately. Responsibility lies with the exploration phase of assignment 6 that tries more different prices while assignment 7 has only one imposed price.
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Assignment 6 \& 7 Comparison}
+	\begin{itemize}
+		\item Assignment 6 shows a bigger cumulative regret than the one of assignment 7.This can be justified by the initial exploration phase in which a lot of regret is accumulated.
+		\item Assignment 6 has a continuously decreasing slope of cumulative regret while assignment 7 shows a quite linear slope, this underlines that assignment 6 is improving while assignment 7 has settled in a sub-optimal solution.
+	\end{itemize}
 \end{frame}
 
 \end{document}
